chore: Fix dark mode issue

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -583,6 +583,10 @@ video {
   z-index: 20;
 }
 
+.z-30 {
+  z-index: 30;
+}
+
 .m-auto {
   margin: auto;
 }
